--- a/citas/templates/contacto.html
+++ b/citas/templates/contacto.html
@@ -17,12 +17,32 @@
             <iframe id="map-canvas" class="map_part" width="600"  height="450"  frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%&amp;height=100%&amp;hl=en&amp;q=La dehesa 30, Santiago&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
         </div>
         <div class="col-6">
-            <form action="">
+            {% if messages %}
+                <div class="alert alert-success" role="alert">
+                    {% for message in messages %}
+                        {{ message }}
+                    {% endfor %}
+                </div>
+            {% endif %}
+
+            <form method="post">
                 {% csrf_token %}
-                <input type="text" placeholder="Nombre" class="form-control"><br>
-                <input type="email" placeholder="Email" class="form-control"><br>
-                <textarea name="" id=""placeholder="Mensaje" class="form-control">
-                </textarea><br>
+                {{ form.non_field_errors }}
+                
+                <div class="form-group mb-3">
+                    {{ form.nombre }}
+                    {{ form.nombre.errors }}
+                </div>
+
+                <div class="form-group mb-3">
+                    {{ form.email }}
+                    {{ form.email.errors }}
+                </div>
+
+                <div class="form-group mb-3">
+                    {{ form.mensaje }}
+                    {{ form.mensaje.errors }}
+                </div>
                 <input type="submit" name="" id="" value="Enviar" class="btn btn-primary">
             </form>
         </div>
