--- a/citas/templates/registro.html
+++ b/citas/templates/registro.html
@@ -3,15 +3,20 @@
 {% load static %}
 {% block contenido %}
     <div class="container">
-        <h1 class="text-center">Inicia Sesión</h1>
+        <h1 class="text-center">Registro de Usuario</h1>
         <div class="login m-5 mx-auto p-5">
-            <form action="">
+            {% if mensaje %}
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                {{ mensaje }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            {% endif %}
+            <form method="post">
                 {% csrf_token %}
                 <div class="registro">
-                    <input type="text" name="" id="" placeholder="Ingresa tu User" class="form-control"> <br>
-                    <input type="email" name="" id="" placeholder="Ingresa tu Email" class="form-control"> <br>
-                    <input type="password" name="" id="" placeholder="Ingresa tu Clave" class="form-control"> <br>
-                    <input type="submit" value="Inicia Sesión" class="btn btn-primary">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button type="submit">Registrarse</button>
                 </div>
             </form>
         </div>
