--- a/citas/templates/login.html
+++ b/citas/templates/login.html
@@ -5,13 +5,10 @@
     <div class="container">
         <h1 class="text-center">Inicia Sesión</h1>
         <div class="login m-5 mx-auto p-5">
-            <form action="">
+            <form method="post">
                 {% csrf_token %}
-                <div class="login">
-                    <input type="email" name="" id="" placeholder="Ingresa tu Email" class="form-control"> <br>
-                    <input type="password" name="" id="" placeholder="Ingresa tu Clave" class="form-control"> <br>
-                    <input type="submit" value="Inicia Sesión" class="btn btn-primary">
-                </div>
+                {{ form.as_p }} <br>
+                <button type="submit">Iniciar sesión</button>
             </form>
         </div>
     </div>
