--- a/citas/templates/agenda.html
+++ b/citas/templates/agenda.html
@@ -2,27 +2,12 @@
 
 {% load static %}
 {% block contenido %}
-    <div class="container">
-        <form action="" class="agenda mx-auto p-5">
-            <select name="" id="" class="form-control">
-                <option value="1">Centro médico</option>
-            </select>
-            <br>
-            <select name="" id="" class="form-control">
-                <option value="1">Especialidad</option>
-            </select>
-            <br>
-            <select name="" id="" class="form-control">
-                <option value="1">Especialista</option>
-            </select>
-            <br>
-            <input type="date" name="" id="" value="Fecha Disponible" class="form-control">
-            <br>
-            <select name="" id="" class="form-control">
-                <option value="1">Horas disponibles</option>
-            </select>
-            <br>
-            <input type="submit" value="Guardar" class="btn btn-primary">
+    <div class="container registro ancho p-5">
+        <h2>Crear Agenda Disponible</h2>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-primary">Guardar</button>
         </form>
     </div>
 {% endblock %}
