--- a/citas/templates/logout.html
+++ b/citas/templates/logout.html
@@ -2,4 +2,7 @@
 
 {% load static %}
 {% block contenido %}
+    <div class="container text-center">
+        <h1>Gracias por visitarnos!</h1>
+    </div>
 {% endblock %}
